load("@rules_cc//cc:defs.bzl", "cc_library", "objc_library")
load("//:build_variables.bzl", "GFXSTREAM_HOST_COPTS", "GFXSTREAM_HOST_DEFINES")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gles1_dec",
    srcs = [
        "gles1_dec/gles1_dec.cpp",
        "gles1_dec/gles1_server_context.cpp",
        "gles1_dec/gles_v1_decoder.cpp",
    ],
    hdrs = glob(["gles1_dec/*.h"]),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    deps = [
        ":EGL_translator_headers",
        ":EGL_translator_static",
        ":gfxstream_glsnapshot",
        "//common/base:gfxstream_common_base",
        "//common/logging:gfxstream_common_logging",
        "//host/decoder_common:gfxstream_host_decoder_common",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch_headers",
        "//host/iostream:gfxstream_host_iostream",
        "//host/library:gfxstream_host_library",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles_headers",
        "//third_party/opengl:gfxstream_opengl_headers",
    ],
)

cc_library(
    name = "gl_common_headers",
    hdrs = glob(["glestranslator/common/include/**/*.h"]),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    includes = ["glestranslator/common/include"],
    deps = [
        "//common/base:gfxstream_common_base",
        "//common/etc:gfxstream_etc",
        "//common/logging:gfxstream_common_logging",
        "//host:gfxstream_backend_headers",
        "//host/decoder_common:gfxstream_host_decoder_common",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch_headers",
        "//host/snapshot:gfxstream_host_snapshot",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//third_party/opengl:gfxstream_gles3_headers",
        "//third_party/opengl:gfxstream_gles_headers",
        "//third_party/opengl:gfxstream_opengl_headers",
    ],
)

objc_library(
    name = "egl_translator-darwin",
    srcs = [
        "glestranslator/egl/mac_native.m",
        "glestranslator/egl/mac_pixel_formats_attribs.m",
    ] + glob(["glestranslator/egl/*.h"]),
    copts = GFXSTREAM_HOST_COPTS + [
        "-Wno-deprecated-declarations",
    ],
    defines = GFXSTREAM_HOST_DEFINES,
    sdk_frameworks = [
        "IOSurface",
        "AppKit",
        "CoreGraphics",
        "OpenGL",
    ],
    target_compatible_with = [
        "@platforms//os:macos",
    ],
    alwayslink = True,
)

cc_library(
    name = "EGL_translator_headers",
    hdrs = [
        "glestranslator/egl/client_api_exts.h",
        "glestranslator/egl/core_profile_configs.h",
        "glestranslator/egl/egl_config.h",
        "glestranslator/egl/egl_context.h",
        "glestranslator/egl/egl_display.h",
        "glestranslator/egl/egl_global_info.h",
        "glestranslator/egl/egl_os_api.h",
        "glestranslator/egl/egl_pbuffer_surface.h",
        "glestranslator/egl/egl_surface.h",
        "glestranslator/egl/egl_thread_info.h",
        "glestranslator/egl/egl_validate.h",
        "glestranslator/egl/egl_window_surface.h",
        "glestranslator/egl/shader_cache.h",
        "glestranslator/egl/thread_info.h",
    ] + select({
        "@platforms//os:macos": [
            "glestranslator/egl/mac_native.h",
            "glestranslator/egl/mac_pixel_formats_attribs.h",
        ],
        "@platforms//os:windows": [
        ],
        "@platforms//os:linux": [
            "glestranslator/egl/x11_error_handler.h",
        ],
        "//conditions:default": [],
    }),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    includes = ["glestranslator/egl"],
    deps = [
        ":gl_common_headers",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//host:gfxstream_backend_headers",
        "//common/base:gfxstream_common_base",
        "//host/decoder_common:gfxstream_host_decoder_common",
    ],
)

cc_library(
    name = "EGL_translator_static",
    srcs = [
        "glestranslator/egl/client_api_exts.cpp",
        "glestranslator/egl/egl_config.cpp",
        "glestranslator/egl/egl_context.cpp",
        "glestranslator/egl/egl_display.cpp",
        "glestranslator/egl/egl_global_info.cpp",
        "glestranslator/egl/egl_imp.cpp",
        "glestranslator/egl/egl_os_api_egl.cpp",
        "glestranslator/egl/egl_pbuffer_surface.cpp",
        "glestranslator/egl/egl_surface.cpp",
        "glestranslator/egl/egl_thread_info.cpp",
        "glestranslator/egl/egl_validate.cpp",
        "glestranslator/egl/egl_window_surface.cpp",
        "glestranslator/egl/shader_cache.cpp",
        "glestranslator/egl/thread_info.cpp",
    ] + select({
        "@platforms//os:macos": [
            "glestranslator/egl/egl_os_api_darwin.cpp",
        ],
        "@platforms//os:windows": [
            "glestranslator/egl/core_profile_configs_windows.cpp",
            "glestranslator/egl/egl_os_api_wgl.cpp",
        ],
        "@platforms//os:linux": [
            "glestranslator/egl/core_profile_configs_linux.cpp",
            "glestranslator/egl/egl_os_api_glx.cpp",
            "glestranslator/egl/x11_error_handler.cpp",
        ],
        "//conditions:default": [],
    }),
    hdrs = [
        "glestranslator/egl/client_api_exts.h",
        "glestranslator/egl/core_profile_configs.h",
        "glestranslator/egl/egl_config.h",
        "glestranslator/egl/egl_context.h",
        "glestranslator/egl/egl_display.h",
        "glestranslator/egl/egl_global_info.h",
        "glestranslator/egl/egl_os_api.h",
        "glestranslator/egl/egl_pbuffer_surface.h",
        "glestranslator/egl/egl_surface.h",
        "glestranslator/egl/egl_thread_info.h",
        "glestranslator/egl/egl_validate.h",
        "glestranslator/egl/egl_window_surface.h",
        "glestranslator/egl/shader_cache.h",
        "glestranslator/egl/thread_info.h",
    ] + select({
        "@platforms//os:macos": [
            "glestranslator/egl/mac_native.h",
            "glestranslator/egl/mac_pixel_formats_attribs.h",
        ],
        "@platforms//os:windows": [
        ],
        "@platforms//os:linux": [
            "glestranslator/egl/x11_error_handler.h",
        ],
        "//conditions:default": [],
    }),
    copts = GFXSTREAM_HOST_COPTS + [
        "-Wno-extern-c-compat",
        "-Wno-inconsistent-missing-override",
        "-Wno-return-type-c-linkage",
    ],
    defines = GFXSTREAM_HOST_DEFINES,
    textual_hdrs = [
        "glestranslator/egl/client_api_exts.in",
    ],
    deps =
        [
            ":EGL_translator_headers",
            ":gl_common",
            ":gl_common_headers",
            "//common/base:gfxstream_common_base",
            "//common/etc:gfxstream_etc",
            "//common/logging:gfxstream_common_logging",
            "//common/utils:gfxstream_common_utils",
            "//host:gfxstream_backend_headers",
            "//host:gfxstream_host_headers",
            "//host/common:gfxstream_host_common",
            "//host/decoder_common:gfxstream_host_decoder_common",
            "//host/gl/glestranslator/gles_cm:gles_cm_translator_static",
            "//host/gl/glestranslator/gles_v2:gles_v2_translator_static",
            "//host/library:gfxstream_host_library",
            "//third_party/opengl:gfxstream_egl_headers",
            "//third_party/opengl:gfxstream_gles2_headers",
            "//third_party/opengl:gfxstream_gles_headers",
            "//third_party/opengl:gfxstream_glx_headers",
            "//third_party/opengl:gfxstream_opengl_headers",
            "//third_party/x11:gfxstream_x11_headers",
        ] + select({
            "@platforms//os:macos": [":egl_translator-darwin"],
            "//conditions:default": [],
        }),
    alwayslink = True,
)

cc_library(
    name = "gl_common",
    srcs = [
        "glestranslator/common/framebuffer_data.cpp",
        "glestranslator/common/gl_background_loader.cpp",
        "glestranslator/common/gl_dispatch.cpp",
        "glestranslator/common/gl_utils.cpp",
        "glestranslator/common/gles_buffer.cpp",
        "glestranslator/common/gles_context.cpp",
        "glestranslator/common/gles_pointer.cpp",
        "glestranslator/common/gles_validate.cpp",
        "glestranslator/common/named_object.cpp",
        "glestranslator/common/object_data.cpp",
        "glestranslator/common/object_name_space.cpp",
        "glestranslator/common/palette_texture.cpp",
        "glestranslator/common/range_manip.cpp",
        "glestranslator/common/rgtc.cpp",
        "glestranslator/common/saveable_texture.cpp",
        "glestranslator/common/scoped_gl_state.cpp",
        "glestranslator/common/share_group.cpp",
        "glestranslator/common/texture_data.cpp",
        "glestranslator/common/texture_utils.cpp",
    ],
    copts = GFXSTREAM_HOST_COPTS + [
        "-Wno-extern-c-compat",
    ],
    defines = GFXSTREAM_HOST_DEFINES,
    deps = [
        ":EGL_translator_headers",
        ":gl_common_headers",
        "//common/base:gfxstream_common_base",
        "//common/etc:gfxstream_etc",
        "//common/logging:gfxstream_common_logging",
        "//host:gfxstream_backend_headers",
        "//host/common:gfxstream_host_common",
        "//host/compressed_textures:gfxstream_host_compressed_textures",
        "//host/library:gfxstream_host_library",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//third_party/opengl:gfxstream_gles3_headers",
        "//third_party/opengl:gfxstream_gles_headers",
        "//third_party/opengl:gfxstream_glx_headers",
        "//third_party/opengl:gfxstream_opengl_headers",
    ],
)

cc_library(
    name = "gles2_dec",
    srcs = [
        "gles2_dec/gles2_dec.cpp",
        "gles2_dec/gles2_server_context.cpp",
        "gles2_dec/gles_v2_decoder.cpp",
    ],
    hdrs = glob(["gles2_dec/*.h"]),
    copts = GFXSTREAM_HOST_COPTS,
    defines = GFXSTREAM_HOST_DEFINES,
    deps = [
        ":EGL_translator_headers",
        ":EGL_translator_static",
        ":gfxstream_glsnapshot",
        "//common/base:gfxstream_common_base",
        "//common/logging:gfxstream_common_logging",
        "//host/common:gfxstream_host_common",
        "//host/decoder_common:gfxstream_host_decoder_common",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch_headers",
        "//host/iostream:gfxstream_host_iostream",
        "//host/library:gfxstream_host_library",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//third_party/opengl:gfxstream_gles3_headers",
    ],
)

cc_library(
    name = "gfxstream_glsnapshot",
    srcs = ["glsnapshot/gl_snapshot.cpp"],
    hdrs = ["glsnapshot/gl_snapshot.h"],
    copts = GFXSTREAM_HOST_COPTS + [
        "-Wno-extern-c-compat",
    ],
    defines = GFXSTREAM_HOST_DEFINES,
    includes = ["glsnapshot"],
    deps = [
        "//host/decoder_common:gfxstream_host_decoder_common",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//third_party/opengl:gfxstream_gles3_headers",
    ],
)

cc_library(
    name = "gfxstream_opengl_server",
    srcs = [
        "buffer_gl.cpp",
        "color_buffer_gl.cpp",
        "compositor_gl.cpp",
        "debug_gl.cpp",
        "display_gl.cpp",
        "display_surface_gl.cpp",
        "emulated_egl_config.cpp",
        "emulated_egl_context.cpp",
        "emulated_egl_fence_sync.cpp",
        "emulated_egl_image.cpp",
        "emulated_egl_window_surface.cpp",
        "emulation_gl.cpp",
        "gles_version_detector.cpp",
        "pixel_read_formats.cpp",
        "readback_worker_gl.cpp",
        "render_thread_info_gl.cpp",
        "texture_draw.cpp",
        "texture_resize.cpp",
        "yuv_converter.cpp",
    ],
    hdrs = [
        "borrowed_image_gl.h",
        "buffer_gl.h",
        "color_buffer_gl.h",
        "compositor_gl.h",
        "context_helper.h",
        "debug_gl.h",
        "display_gl.h",
        "display_surface_gl.h",
        "emulated_egl_config.h",
        "emulated_egl_context.h",
        "emulated_egl_fence_sync.h",
        "emulated_egl_image.h",
        "emulated_egl_window_surface.h",
        "emulation_gl.h",
        "gles_version_detector.h",
        "pixel_read_formats.h",
        "readback_worker_gl.h",
        "render_thread_info_gl.h",
        "texture_draw.h",
        "texture_resize.h",
        "yuv_converter.h",
    ],
    copts = GFXSTREAM_HOST_COPTS + [
        "-Wno-extern-c-compat",
    ],
    defines = GFXSTREAM_HOST_DEFINES,
    includes = [
        ".",
    ],
    deps = [
        ":EGL_translator_headers",
        ":EGL_translator_static",
        ":gfxstream_glsnapshot",
        ":gl_common_headers",
        ":gles1_dec",
        ":gles2_dec",
        "//common/base:gfxstream_common_base",
        "//common/logging:gfxstream_common_logging",
        "//common/utils:gfxstream_common_utils",
        "//host:gfxstream_backend_headers",
        "//host:gfxstream_host_headers",
        "//host/common:gfxstream_host_common",
        "//host/decoder_common:gfxstream_host_decoder_common",
        "//host/features:gfxstream_host_features",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch_headers",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//third_party/opengl:gfxstream_gles3_headers",
        "//third_party/opengl:gfxstream_gles_headers",
        "//third_party/opengl:gfxstream_opengl_headers",
    ],
)
