load("@rules_cc//cc:defs.bzl", "cc_library", "objc_library")
load("//:build_variables.bzl", "GFXSTREAM_HOST_COPTS", "GFXSTREAM_HOST_DEFINES")

package(
    default_applicable_licenses = ["//:gfxstream_license"],
    default_visibility = ["//:gfxstream"],
)

cc_library(
    name = "gfxstream_opengl_server",
    srcs = [
        "buffer_gl.cpp",
        "color_buffer_gl.cpp",
        "compositor_gl.cpp",
        "debug_gl.cpp",
        "display_gl.cpp",
        "display_surface_gl.cpp",
        "emulated_egl_config.cpp",
        "emulated_egl_context.cpp",
        "emulated_egl_fence_sync.cpp",
        "emulated_egl_image.cpp",
        "emulated_egl_window_surface.cpp",
        "emulation_gl.cpp",
        "gles_version_detector.cpp",
        "pixel_read_formats.cpp",
        "readback_worker_gl.cpp",
        "render_thread_info_gl.cpp",
        "texture_draw.cpp",
        "texture_resize.cpp",
        "yuv_converter.cpp",
    ],
    hdrs = [
        "borrowed_image_gl.h",
        "buffer_gl.h",
        "color_buffer_gl.h",
        "compositor_gl.h",
        "context_helper.h",
        "debug_gl.h",
        "display_gl.h",
        "display_surface_gl.h",
        "emulated_egl_config.h",
        "emulated_egl_context.h",
        "emulated_egl_fence_sync.h",
        "emulated_egl_image.h",
        "emulated_egl_window_surface.h",
        "emulation_gl.h",
        "gles_version_detector.h",
        "pixel_read_formats.h",
        "readback_worker_gl.h",
        "render_thread_info_gl.h",
        "texture_draw.h",
        "texture_resize.h",
        "yuv_converter.h",
    ],
    copts = GFXSTREAM_HOST_COPTS + [
        "-Wno-extern-c-compat",
    ],
    defines = GFXSTREAM_HOST_DEFINES,
    includes = [
        ".",
    ],
    deps = [
        "//common/base:gfxstream_common_base",
        "//common/logging:gfxstream_common_logging",
        "//common/utils:gfxstream_common_utils",
        "//host:gfxstream_backend_headers",
        "//host:gfxstream_host_headers",
        "//host/common:gfxstream_host_common",
        "//host/decoder_common:gfxstream_host_decoder_common",
        "//host/features:gfxstream_host_features",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch",
        "//host/gl/OpenGLESDispatch:gfxstream_host_openglesdispatch_headers",
        "//host/gl/gles1_dec:gfxstream_gles1_dec",
        "//host/gl/gles2_dec:gfxstream_gles2_dec",
        "//host/gl/glestranslator/common:gfxstream_glestranslator_common_headers",
        "//host/gl/glestranslator/egl:gfxstream_glestranslator_egl_translator",
        "//host/gl/glestranslator/egl:gfxstream_glestranslator_egl_translator_headers",
        "//host/gl/glsnapshot:gfxstream_glsnapshot",
        "//third_party/opengl:gfxstream_egl_headers",
        "//third_party/opengl:gfxstream_gles2_headers",
        "//third_party/opengl:gfxstream_gles3_headers",
        "//third_party/opengl:gfxstream_gles_headers",
        "//third_party/opengl:gfxstream_opengl_headers",
    ],
)
